tools/rils-capi/csharp/Rils.CSharp/Generated/NativeMethods.g.cs

// <auto-generated />
#nullable enable
using System;
using System.Runtime.InteropServices;

namespace Rils.CSharp
{

public enum RilsStatus : int
{
    Ok = 0,
    InvalidArgument = 1,
    InvalidHandle = 2,
    CompileError = 3,
    ExecutionError = 4,
    UnsupportedValue = 5,
    BytecodeError = 6,
    Panic = 255,
}

public enum RilsValueTag : uint
{
    Unit = 0,
    Bool = 1,
    I8 = 2,
    I16 = 3,
    I32 = 4,
    I64 = 5,
    I128 = 6,
    Isize = 7,
    U8 = 8,
    U16 = 9,
    U32 = 10,
    U64 = 11,
    U128 = 12,
    Usize = 13,
    F32 = 14,
    F64 = 15,
    Char = 16,
    HostHandle = 17,
    InlineValue = 18,
    String = 19,
}

public enum RilsHostTypeKind : uint
{
    Opaque = 0,
    Value = 1,
    Enum = 2,
}

public enum RilsFormatKind : uint
{
    Display = 0,
    Debug = 1,
}

[StructLayout(LayoutKind.Sequential)]
internal unsafe struct NativeSlice
{
    internal byte* Data;
    internal UIntPtr Length;
}

[StructLayout(LayoutKind.Sequential)]
internal struct NativeValue
{
    internal RilsValueTag Tag;
    internal uint Reserved;
    internal ulong Low;
    internal ulong High;
}

[StructLayout(LayoutKind.Sequential)]
internal unsafe struct NativeHostFunction
{
    internal ulong FunctionId;
    internal NativeSlice Name;
    internal NativeSlice Capability;
    internal uint* ParameterTags;
    internal UIntPtr ParameterCount;
    internal RilsValueTag ReturnTag;
    internal uint Reserved;
}

[StructLayout(LayoutKind.Sequential)]
internal struct NativeHostType
{
    internal NativeSlice Name;
    internal NativeSlice BaseType;
    internal RilsValueTag TransportTag;
    internal uint Reserved;
}

[StructLayout(LayoutKind.Sequential)]
internal struct NativeHostTypeV2
{
    internal NativeSlice Name;
    internal NativeSlice BaseType;
    internal NativeSlice ValueLayout;
    internal RilsValueTag TransportTag;
    internal RilsHostTypeKind Kind;
    internal uint Reserved;
}

[StructLayout(LayoutKind.Sequential)]
internal struct NativeHostEnumVariant
{
    internal NativeSlice Name;
    internal ulong RawLow;
    internal ulong RawHigh;
}

[StructLayout(LayoutKind.Sequential)]
internal unsafe struct NativeHostTypeV3
{
    internal NativeSlice Name;
    internal NativeSlice BaseType;
    internal NativeSlice ValueLayout;
    internal NativeHostEnumVariant* EnumVariants;
    internal UIntPtr EnumVariantCount;
    internal RilsValueTag TransportTag;
    internal RilsHostTypeKind Kind;
    internal uint EnumFlags;
    internal uint Reserved;
}

[StructLayout(LayoutKind.Sequential)]
internal struct NativeHostParameter
{
    internal NativeSlice LogicalType;
    internal RilsValueTag TransportTag;
    internal uint Reserved;
}

[StructLayout(LayoutKind.Sequential)]
internal unsafe struct NativeHostFunctionV2
{
    internal ulong FunctionId;
    internal NativeSlice Name;
    internal NativeSlice Capability;
    internal NativeHostParameter* Parameters;
    internal UIntPtr ParameterCount;
    internal NativeHostParameter ReturnParameter;
    internal uint Receiver;
    internal uint Reserved;
}

[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal unsafe delegate int NativeHostDispatcher(
    IntPtr userData,
    ulong functionId,
    NativeValue* arguments,
    UIntPtr argumentCount,
    NativeValue* outValue,
    NativeSlice* outError);

[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal delegate void NativeOutputCallback(
    IntPtr userData,
    NativeSlice text,
    uint newline);

[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
internal unsafe delegate UIntPtr NativeHostValueFormatCallback(
    IntPtr userData,
    NativeSlice logicalType,
    NativeValue value,
    uint kind,
    uint alternate,
    UIntPtr precision,
    byte* buffer,
    UIntPtr capacity);

internal static unsafe class NativeMethods
{
    internal const string LibraryName = "rils_capi";

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_abi_version")]
    internal static extern uint AbiVersion();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_create")]
    internal static extern ulong RuntimeCreate();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_destroy")]
    internal static extern int RuntimeDestroy(ulong @runtime);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_set_max_steps")]
    internal static extern int RuntimeSetMaxSteps(ulong @runtime, ulong @max_steps);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_register_host_functions")]
    internal static extern int RuntimeRegisterHostFunctions(ulong @runtime, NativeHostFunction* @functions, UIntPtr @function_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_register_host_types")]
    internal static extern int RuntimeRegisterHostTypes(ulong @runtime, NativeHostType* @types, UIntPtr @type_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_register_host_types_v2")]
    internal static extern int RuntimeRegisterHostTypesV2(ulong @runtime, NativeHostTypeV2* @types, UIntPtr @type_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_register_host_types_v3")]
    internal static extern int RuntimeRegisterHostTypesV3(ulong @runtime, NativeHostTypeV3* @types, UIntPtr @type_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_register_host_functions_v2")]
    internal static extern int RuntimeRegisterHostFunctionsV2(ulong @runtime, NativeHostFunctionV2* @functions, UIntPtr @function_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_register_host_manifest")]
    internal static extern int RuntimeRegisterHostManifest(ulong @runtime, NativeSlice @manifest);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_host_manifest_size")]
    internal static extern int RuntimeHostManifestSize(ulong @runtime, out UIntPtr @out_size);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_write_host_manifest")]
    internal static extern int RuntimeWriteHostManifest(ulong @runtime, byte* @buffer, UIntPtr @buffer_capacity, out UIntPtr @out_written);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_set_host_dispatcher")]
    internal static extern int RuntimeSetHostDispatcher(ulong @runtime, NativeHostDispatcher @dispatcher, IntPtr @user_data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_set_output_callback")]
    internal static extern int RuntimeSetOutputCallback(ulong @runtime, NativeOutputCallback? @callback, IntPtr @user_data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_set_host_value_formatter")]
    internal static extern int RuntimeSetHostValueFormatter(ulong @runtime, NativeHostValueFormatCallback? @callback, IntPtr @user_data);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_allow_capability")]
    internal static extern int RuntimeAllowCapability(ulong @runtime, NativeSlice @capability);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_allow_standard_library")]
    internal static extern int RuntimeAllowStandardLibrary(ulong @runtime);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_freeze_host_registry")]
    internal static extern int RuntimeFreezeHostRegistry(ulong @runtime);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_compile")]
    internal static extern int ModuleCompile(ulong @runtime, NativeSlice @source_name, NativeSlice @source, out ulong @out_module);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_compile_file")]
    internal static extern int ModuleCompileFile(ulong @runtime, NativeSlice @path, out ulong @out_module);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_load_bytecode")]
    internal static extern int ModuleLoadBytecode(ulong @runtime, NativeSlice @bytecode, out ulong @out_module);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_load_bytecode_file")]
    internal static extern int ModuleLoadBytecodeFile(ulong @runtime, NativeSlice @path, out ulong @out_module);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_validate_host")]
    internal static extern int ModuleValidateHost(ulong @runtime, ulong @module);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_trait_implementation_count")]
    internal static extern int ModuleTraitImplementationCount(ulong @runtime, ulong @module, NativeSlice @trait_name, NativeSlice @source_name, out UIntPtr @out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_trait_implementation_name_size")]
    internal static extern int ModuleTraitImplementationNameSize(ulong @runtime, ulong @module, NativeSlice @trait_name, NativeSlice @source_name, UIntPtr @index, out UIntPtr @out_size);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_write_trait_implementation_name")]
    internal static extern int ModuleWriteTraitImplementationName(ulong @runtime, ulong @module, NativeSlice @trait_name, NativeSlice @source_name, UIntPtr @index, byte* @buffer, UIntPtr @buffer_capacity, out UIntPtr @out_written);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_bytecode_size")]
    internal static extern int ModuleBytecodeSize(ulong @runtime, ulong @module, out UIntPtr @out_size);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_write_bytecode")]
    internal static extern int ModuleWriteBytecode(ulong @runtime, ulong @module, byte* @buffer, UIntPtr @buffer_capacity, out UIntPtr @out_written);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_write_bytecode_file")]
    internal static extern int ModuleWriteBytecodeFile(ulong @runtime, ulong @module, NativeSlice @path);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_destroy")]
    internal static extern int ModuleDestroy(ulong @runtime, ulong @module);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_instance_create")]
    internal static extern int InstanceCreate(ulong @runtime, ulong @module, out ulong @out_instance);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_instance_destroy")]
    internal static extern int InstanceDestroy(ulong @runtime, ulong @instance);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_instance_execute")]
    internal static extern int InstanceExecute(ulong @runtime, ulong @instance, out NativeValue @out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_instance_call")]
    internal static extern int InstanceCall(ulong @runtime, ulong @instance, NativeSlice @function_name, NativeValue* @arguments, UIntPtr @argument_count, out NativeValue @out_value);
